--- a/Proposal/ijcai17/document.bib
+++ b/Proposal/ijcai17/document.bib
@@ -10,15 +10,6 @@
   publisher={ACM}
 }
 
-@inproceedings{bollacker2008freebase,
-  title={Freebase: a collaboratively created graph database for structuring human knowledge},
-  author={Bollacker, Kurt and Evans, Colin and Paritosh, Praveen and Sturge, Tim and Taylor, Jamie},
-  booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
-  pages={1247--1250},
-  year={2008},
-  organization={ACM}
-}
-
 @inproceedings{bast2014easy,
   title={Easy access to the freebase dataset},
   author={Bast, Hannah and B{\"a}urle, Florian and Buchhold, Bj{\"o}rn and Hau{\ss}mann, Elmar},
@@ -27,7 +18,6 @@
   year={2014},
   organization={International World Wide Web Conferences Steering Committee}
 }
-
 
 @article{pelikanova2014google,
   title={Google Knowledge Graph},
@@ -290,7 +280,11 @@ pages = {331-339}
 
 @inproceedings{cheng2011automatedfull,
   title={Automated feature generation from structured knowledge},
-  author={Cheng, Weiwei and Kasneci, Gjergji and Graepel, Thore and Stern, David and Herbrich, Ralf},
+  author={Weiwei Cheng and
+               Gjergji Kasneci and
+               Thore Graepel and
+               David H. Stern and
+               Ralf Herbrich},
   booktitle={Proceedings of the 20th ACM international conference on Information and knowledge management},
   pages={1395--1404},
   year={2011},
@@ -355,9 +349,13 @@ pages = {331-339}
 }
 
 @inproceedings{hersh1994ohsumed,
-  title={OHSUMED: An interactive retrieval evaluation and new large test collection for research},
-  author={Hersh, William and Buckley, Chris and Leone, TJ and Hickam, David},
-  booktitle={SIGIR’94},
+  title={{OHSUMED:} An Interactive Retrieval Evaluation and New Large Test
+               Collection for Research},
+  author={William R. Hersh and
+               Chris Buckley and
+               T. J. Leone and
+               David H. Hickam},
+  booktitle={Proceedings of the 17th annual international ACM SIGIR conference on Research and development in information retrieval},
   pages={192--201},
   year={1994},
   organization={Springer}
@@ -373,13 +371,14 @@ pages = {331-339}
   publisher={Elsevier}
 }
 
-@book{joachims1998text,
+@inproceedings{joachims1998text,
   title={Text categorization with support vector machines: Learning with many relevant features},
   author={Joachims, Thorsten},
+  booktitle={European conference on machine learning},
+  pages={137--142},
   year={1998},
-  publisher={Springer}
+  organization={Springer}
 }
-
 @article{lewis2004rcv1,
   title={Rcv1: A new benchmark collection for text categorization research},
   author={Lewis, David D and Yang, Yiming and Rose, Tony G and Li, Fan},
@@ -436,13 +435,13 @@ pages = {331-339}
 
 @techreport{utgo1991linear,
   title={Linear machine decision trees},
-  author={Utgo, Paul E and Brodley, Carla E},
+  author={Utgoff, Paul E and Brodley, Carla E},
   year={1991},
   institution={Tech. Rep. COINS 91-10, University of Massachusetts, Amherst, MA, USA}
 }
 
 @article{popescul200716,
-  title={16 Feature Generation and Selection in Multi-Relational Statistical Learning},
+  title={Feature Generation and Selection in Multi-Relational Statistical Learning},
   author={Popescul, Alexandrin and Ungar, Lyle H},
   journal={STATISTICAL RELATIONAL LEARNING},
   pages={453},
@@ -569,9 +568,14 @@ pages = {331-339}
 
 @book{breiman1984classification,
   title={Classification and regression trees},
-  author={Breiman, Leo and Friedman, Jerome and Stone, Charles J and Olshen, Richard A},
-  year={1984},
-  publisher={CRC press}
+  author    = {Leo Breiman and
+               J. H. Friedman and
+               R. A. Olshen and
+               C. J. Stone},
+  title     = {Classification and Regression Trees},
+  publisher = {Wadsworth},
+  year      = {1984},
+  isbn      = {0-534-98053-8},
 }
 
 @techreport{fix1951discriminatory,
@@ -622,8 +626,9 @@ pages = {331-339}
 	title={Wikipedia-based semantic interpretation for natural language processing},
 	author={Gabrilovich, Evgeniy and Markovitch, Shaul},
 	journal={Journal of Artificial Intelligence Research},
-	pages={443--498},
-	year={2009}
+	volume    = {34},
+  pages     = {443--498},
+  year      = {2009},
 }
 
 @article{gabrilovich2009wikipedia,
@@ -734,10 +739,9 @@ pages = {331-339}
 @inproceedings{hirsh1994bootstrapping,
   title={Bootstrapping training-data representations for inductive learning: A case study in molecular biology},
   author={Hirsh, Haym and Japkowicz, Nathalie},
-  booktitle={AAAI},
+  booktitle={Proceedings of the 12th National Conference on Artificial Intelligence},
   pages={639--644},
-  year={1994},
-  organization={Citeseer}
+  year={1994}
 }
 
 @inproceedings{sutton1991learning,
@@ -774,7 +778,15 @@ pages = {331-339}
 
 @inproceedings{hoffart2011robust,
   title={Robust disambiguation of named entities in text},
-  author={Hoffart, Johannes and Yosef, Mohamed Amir and Bordino, Ilaria and F{\"u}rstenau, Hagen and Pinkal, Manfred and Spaniol, Marc and Taneva, Bilyana and Thater, Stefan and Weikum, Gerhard},
+  author={Johannes Hoffart and
+               Mohamed Amir Yosef and
+               Ilaria Bordino and
+               Hagen F{\"{u}}rstenau and
+               Manfred Pinkal and
+               Marc Spaniol and
+               Bilyana Taneva and
+               Stefan Thater and
+               Gerhard Weikum},
   booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
   pages={782--792},
   year={2011},
@@ -785,4 +797,76 @@ pages = {331-339}
   title={Feature Generation using Ontologies during Induction of Decision Trees on Linked Data},
   author={Terziev, Yordan},
   year={2011}
+  }
+  
+  @inproceedings{bollacker2008freebase,
+  title={Freebase: a collaboratively created graph database for structuring human knowledge},
+  author={Kurt D. Bollacker and Evans, Colin and Paritosh, Praveen and Sturge, Tim and Taylor, Jamie},
+  booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
+  pages={1247--1250},
+  year={2008},
+  organization={AcM}
+}
+
+@article{lecun1998gradient,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={IEEE}
+}
+
+@article{lecun2015deep,
+  title={Deep learning},
+  author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  journal={Nature},
+  volume={521},
+  number={7553},
+  pages={436--444},
+  year={2015},
+  publisher={Nature Research}
+}
+
+@incollection{rumelhart1986learning,
+  title={Learning internal representations by error-propagation},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  booktitle={Parallel Distributed Processing: Explorations in the Microstructure of Cognition. Volume 1},
+  volume={1},
+  number={6088},
+  pages={318--362},
+  year={1986},
+  publisher={MIT Press, Cambridge, MA}
+}
+
+@inproceedings{mikolov2013distributed,
+  title={Distributed representations of words and phrases and their compositionality},
+  author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+  booktitle={Advances in neural information processing systems},
+  pages={3111--3119},
+  year={2013}
+}
+
+@article{mcnamara1996good,
+  title={Are good texts always better? Interactions of text coherence, background knowledge, and levels of understanding in learning from text},
+  author={McNamara, Danielle S and Kintsch, Eileen and Songer, Nancy Butler and Kintsch, Walter},
+  journal={Cognition and instruction},
+  volume={14},
+  number={1},
+  pages={1--43},
+  year={1996},
+  publisher={Taylor \& Francis}
+}
+
+@article{mcnamara1996learning,
+  title={Learning from texts: Effects of prior knowledge and text coherence},
+  author={McNamara, Danielle S and Kintsch, Walter},
+  journal={Discourse processes},
+  volume={22},
+  number={3},
+  pages={247--288},
+  year={1996},
+  publisher={Taylor \& Francis}
 }
