--- a/Proposal/ijcai17/document.bib
+++ b/Proposal/ijcai17/document.bib
@@ -433,11 +433,17 @@ pages = {331-339}
   year={1993}
 }
 
-@techreport{utgo1991linear,
-  title={Linear machine decision trees},
-  author={Utgoff, Paul E and Brodley, Carla E},
-  year={1991},
-  institution={Tech. Rep. COINS 91-10, University of Massachusetts, Amherst, MA, USA}
+@article{utgo1991linear,
+  author    = {Carla E. Brodley and
+               Paul E. Utgoff},
+  title     = {Multivariate Decision Trees},
+  journal   = {Machine Learning},
+  volume    = {19},
+  number    = {1},
+  pages     = {45--77},
+  year      = {1995},
+  doi       = {10.1007/BF00994660},
+  timestamp = {Thu, 26 May 2011 15:25:05 +0200},
 }
 
 @article{popescul200716,
@@ -869,4 +875,13 @@ pages = {331-339}
   pages={247--288},
   year={1996},
   publisher={Taylor \& Francis}
+}
+
+@inproceedings{katz2016explorekit,
+  title={ExploreKit: Automatic Feature Generation and Selection},
+  author={Katz, Gilad and Shin, Eui Chul Richard and Song, Dawn},
+  booktitle={Data Mining (ICDM), 2016 IEEE 16th International Conference on},
+  pages={979--984},
+  year={2016},
+  organization={IEEE}
 }
